# IoT_00

creative/: CMakeLists.txt
creative/components/accelerometer/: accelerometer.c  accelerometer.h
creative/components/buttons/: buttons.c  buttons.h
creative/components/custom_error_functions/: error_functions.c  error_functions.h
creative/components/dht11/: CMakeLists.txt  dht_11.c  dht_11.h
creative/components/oled/: CMakeLists.txt  oled.c
creative/components/oled/includes/: oled.h
creative/components/speaker/: CMakeLists.txt  speaker.c  speaker.h
creative/main/: CMakeLists.txt  color.h  main.c  main.h  tasks.c  tasks_accel_buttons.c  tasks_dht_oled.c
t01/: CMakeLists.txt  Makefile
t01/main/: main.c
t02/: CMakeLists.txt  Makefile
t02/components/srcs/: flashing_leds.c  flashing_leds.h
t02/main/: main.c
t03/: CMakeLists.txt
t03/components/buttons/: CMakeLists.txt  buttons.c  buttons.h
t03/main/: CMakeLists.txt  main.c  main.h
t04/: CMakeLists.txt  Makefile
t04/components/dht11/: CMakeLists.txt  dht_11.c  dht_11.h
t04/main/: main.c  main.h
t05/: CMakeLists.txt  Makefile
t05/main/: CMakeLists.txt  main.c
t06/: CMakeLists.txt  Makefile
t06/main/: main.c
t07/: CMakeLists.txt  Makefile
t07/components/oled/: CMakeLists.txt  oled.c
t07/components/oled/includes/: oled.h
t07/main/: CMakeLists.txt  main.c  sh1106.c  sh1106.h
t08/: CMakeLists.txt
t08/components/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h
t08/main/: CMakeLists.txt  img.h  main.c  sh1106.c
